[package]
name = "LinearDistancePi"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
rayon = "1.10"
ctrlc = "3.4"
rand = "0.9.2"
crossbeam = "0.8"
malachite = "0.6.1"